// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Form alignVue demo works fine 1`] = `
<div>
  <div
    class="controls"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="right"
    >
      
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          左对齐
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          右对齐
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          顶部对齐
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
      
    </div>
  </div>
  <form
    class="t-form"
  >
    
    <div
      class="t-form__item t-form-item__name"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 60px;"
      >
        <label
          for=""
        >
          姓名
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 60px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__password"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 60px;"
      >
        <label
          for=""
        >
          密码
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 60px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--suffix"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="password"
            />
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off t-input__suffix-clear"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </span>
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__"
      style="padding-top: 8px;"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 60px;"
      >
        <label
          for=""
        >
          
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 60px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              
              登录
              
            </span>
          </button>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Form Form baseVue demo works fine 1`] = `
<div>
  <form
    class="t-form"
  >
    
    <div
      class="t-form__item t-form-item__name"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          姓名
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入内容"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__tel"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          手机号码
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入内容"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__status"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          接收短信
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-switch t-size-m"
            modelvalue="false"
          >
            <span
              class="t-switch__handle"
            >
              <!---->
            </span>
            <div
              class="t-switch__content t-size-m"
            >
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__gender"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          性别
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-radio-group t-size-m t-radio-group__outline"
            modelvalue=""
          >
            
            <label
              class="t-radio"
              modelvalue="false"
            >
              <input
                class="t-radio__former"
                name=""
                type="radio"
                value="1"
              />
              <span
                class="t-radio__input"
              />
              <span
                class="t-radio__label"
              >
                
                男
                
              </span>
            </label>
            <label
              class="t-radio"
              modelvalue="false"
            >
              <input
                class="t-radio__former"
                name=""
                type="radio"
                value="2"
              />
              <span
                class="t-radio__input"
              />
              <span
                class="t-radio__label"
              >
                
                女
                
              </span>
            </label>
            
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__course"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          课程
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-checkbox-group"
            modelvalue=""
          >
            
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="1"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                语文
                
              </span>
            </label>
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="2"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                数学
                
              </span>
            </label>
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="3"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                英语
                
              </span>
            </label>
            
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__"
      style="padding-top: 8px;"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            style="margin-right: 10px;"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              
              提交
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="reset"
          >
            <span
              class="t-button__text"
            >
              
              重置
              
            </span>
          </button>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Form Form customValidatorVue demo works fine 1`] = `
<div>
  <form
    class="t-form"
  >
    
    <div
      class="t-form__item t-form-item__account"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          用户名
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__password t-form__item-with-help t-form__item-with-extra"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          密码
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--suffix"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="password"
            />
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off t-input__suffix-clear"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </span>
          </div>
          
          <!---->
        </div>
        <div
          class="t-form__help"
        >
          同一个校验方法可输出不同的错误信息和类型，依次输入：1234 观察变化
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__rePassword t-form__item-with-help t-form__item-with-extra"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          确认密码
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--suffix"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="password"
            />
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off t-input__suffix-clear"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </span>
          </div>
          
          <!---->
        </div>
        <div
          class="t-form__help"
        >
          自定义异步校验方法
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__"
      style="padding-top: 8px;"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            style="margin-right: 10px;"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              
              提交
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="reset"
          >
            <span
              class="t-button__text"
            >
              
              重置
              
            </span>
          </button>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Form Form layoutVue demo works fine 1`] = `
<div>
  <div
    class="controls"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="inline"
    >
      
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="vertical"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          纵向布局
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="inline"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          行内布局
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
      
    </div>
  </div>
  <form
    class="t-form t-form-inline"
  >
    
    <div
      class="t-form__item t-form-item__name"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: calc(2em + 24px);"
      >
        <label
          for=""
        >
          名字
        </label>
      </div>
      <div
        class="t-form__controls"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__password"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: calc(2em + 24px);"
      >
        <label
          for=""
        >
          密码
        </label>
      </div>
      <div
        class="t-form__controls"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--suffix"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="password"
            />
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off t-input__suffix-clear"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </span>
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Form Form loginVue demo works fine 1`] = `
<div
  style="width: 350px;"
>
  <form
    class="t-form"
  >
    
    <div
      class="t-form__item t-form-item__account"
    >
      <!---->
      <div
        class="t-form__controls"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--prefix"
            modelvalue=""
          >
            <span
              class="t-input__prefix t-input__prefix-icon"
            >
              
              <svg
                class="t-icon t-icon-desktop"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M2.5 11h5v2H3v1h10v-1H8.5v-2h5a1 1 0 001-1V3a1 1 0 00-1-1h-11a1 1 0 00-1 1v7a1 1 0 001 1zm0-8h11v7h-11V3z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
              
            </span>
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入账户名"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__password"
    >
      <!---->
      <div
        class="t-form__controls"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--prefix t-input--suffix"
            modelvalue=""
          >
            <span
              class="t-input__prefix t-input__prefix-icon"
            >
              
              <svg
                class="t-icon t-icon-lock-on"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 10v1h4v-1H6z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
              
            </span>
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入密码"
              type="password"
            />
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off t-input__suffix-clear"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </span>
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__"
      style="padding-top: 8px;"
    >
      <!---->
      <div
        class="t-form__controls"
      >
        <div
          class="t-form__controls-content"
        >
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-size-full-width"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              
              登录
              
            </span>
          </button>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Form Form validatorStatusVue demo works fine 1`] = `
<div
  class="tdesign-demo-form-status"
>
  <!--
    1. statusIcon 值为 true，显示默认图标。默认图标有 成功、失败、警告 等，不同的状态图标不同
    2. statusIcon 值为 false，不显示图标
    3. statusIcon 值类型为 function，可以自定义右侧状态图标
    4. statusIcon 为 slot(插槽)，可自定义右侧状态图标
  -->
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="true"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="true"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          显示校验图标
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="false"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          隐藏校验图标
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
      
    </div>
  </div>
  <br />
  <br />
  <form
    class="t-form"
  >
    
    <div
      class="t-form__item t-form-item__fail"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          失败
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="校验不通过状态"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__warning"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          警告
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="校验警告状态"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__success"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          成功
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="不带绿色边框的成功状态"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__success"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          成功
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="带绿色边框的成功状态"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__failB"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          失败
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="隐藏状态图标"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__warningB"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          警告
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="校验警告状态"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__loading"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          加载中
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="正在校验中，请稍等"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <span
            class="t-form__status"
          >
            
            <div
              style="width: 25px; display: flex; justify-content: center;"
            >
              <div
                class="t-loading--center t-size-s t-loading"
              >
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  size="small"
                  version="1.1"
                  viewBox="0 0 14 14"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="1"
                    y="1"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                <!---->
              </div>
            </div>
            
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!-- 自定义图标：可以使用渲染函数 statusIcon，也可以使用插槽 statusIcon -->
    <div
      class="t-form__item t-form-item__help"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          帮助
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="自定义右侧图标"
              type="text"
            />
            <!---->
            <!---->
          </div>
          <!-- &lt;t-icon slot="statusIcon" name='help-circle' size="24px" style="color: #0006"/&gt; -->
          
          <span
            class="t-form__status"
          >
            <svg
              class="t-icon t-icon-help-circle"
              style="font-size: 16px; color: rgba(0, 0, 0, 0.4);"
            >
              <use
                href="#t-icon-help-circle"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    
    <div
      class="t-form__item t-form-item__add0"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          新增
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <span
            class="t-form__status"
          >
            
            <button
              class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-add"
                  style="font-size: 16px; color: rgba(0, 0, 0, 0.267);"
                >
                  <use
                    href="#t-icon-add"
                  />
                </svg>
                
              </span>
            </button>
            <!--v-if-->
            
          </span>
        </div>
        <!---->
      </div>
    </div>
    
    <div
      class="t-form__item t-form-item__"
      style="padding-top: 8px;"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 80px;"
      >
        <label
          for=""
        >
          
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 80px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            style="margin-right: 10px;"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              
              提交
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="reset"
          >
            <span
              class="t-button__text"
            >
              
              重置
              
            </span>
          </button>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Form Form validatorVue demo works fine 1`] = `
<div>
  <!--  scrollToFirstError="smooth" -->
  <form
    class="t-form"
  >
    
    <div
      class="t-form__item t-form-item__account t-form__item-with-help t-form__item-with-extra"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          用户名
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <div
          class="t-form__help"
        >
          这是用户名字段帮助说明
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__description t-form__item-with-help t-form__item-with-extra"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          个人简介
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <div
          class="t-form__help"
        >
          一句话介绍自己
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__password"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          密码
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input t-input--suffix"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="password"
            />
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off t-input__suffix-clear"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </span>
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__email"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          邮箱
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__gender"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          性别
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-radio-group t-size-m t-radio-group__outline"
            modelvalue=""
          >
            
            <label
              class="t-radio"
              modelvalue="false"
            >
              <input
                class="t-radio__former"
                name=""
                type="radio"
                value="male"
              />
              <span
                class="t-radio__input"
              />
              <span
                class="t-radio__label"
              >
                
                男
                
              </span>
            </label>
            <label
              class="t-radio"
              modelvalue="false"
            >
              <input
                class="t-radio__former"
                name=""
                type="radio"
                value="femal"
              />
              <span
                class="t-radio__input"
              />
              <span
                class="t-radio__label"
              >
                
                女
                
              </span>
            </label>
            
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__course"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          课程
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-checkbox-group"
            modelvalue=""
          >
            
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="1"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                语文
                
              </span>
            </label>
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="2"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                数学
                
              </span>
            </label>
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="3"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                英语
                
              </span>
            </label>
            <label
              class="t-checkbox undefined"
            >
              <input
                class="t-checkbox__former"
                name=""
                type="checkbox"
                value="4"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                
                体育
                
              </span>
            </label>
            
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__college"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          学院
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-select__wrap demo-select-base"
          >
            <div
              class="t-popup__reference t-select__popup-reference"
            >
              <transition-stub>
                <div
                  aria-hidden="true"
                  class="t-popup"
                  role="tooltip"
                  style="display: none;"
                >
                  <div
                    class="t-popup__content t-select__dropdown narrow-scrollbar"
                  >
                    
                    <div
                      class="t-select__dropdown-inner"
                    >
                      <!---->
                      <ul
                        class="t-select__create-option"
                        style="display: none;"
                      >
                        <li
                          class="t-select-option t-size-m t-select__create-option--special"
                          title=""
                        >
                          
                        </li>
                      </ul>
                      <!---->
                      <li
                        class="t-select__empty t-size-m"
                      >
                        暂无数据
                      </li>
                      <ul
                        class="t-select__groups"
                      >
                        
                        
                        <li
                          class="t-select-option t-size-m"
                          title="计算机学院"
                        >
                          
                          计算机学院
                          
                        </li>
                        <li
                          class="t-select-option t-size-m"
                          title="软件学院"
                        >
                          
                          软件学院
                          
                        </li>
                        <li
                          class="t-select-option t-size-m"
                          title="物联网学院"
                        >
                          
                          物联网学院
                          
                        </li>
                        
                        
                      </ul>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </transition-stub>
              
              <div
                class="t-select t-size-m"
              >
                <!---->
                <span
                  class="t-select__placeholder"
                >
                   
                  请选择
                </span>
                
                
                <span
                  class="t-tag t-tag--default t-size-m t-tag--dark"
                  style="display: none;"
                >
                  <!---->
                  
                  +0
                  
                  <!---->
                </span>
                <!---->
                <!---->
                <svg
                  class="t-fake-arrow t-select__right-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                    stroke="black"
                    stroke-opacity="0.9"
                    stroke-width="1.3"
                  />
                </svg>
                <!---->
                <!---->
              </div>
              
            </div>
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__date"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          入学时间
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__content.url"
    >
      <div
        class="t-form__label t-form__label--required t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          个人网站
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <div
            class="t-input"
            modelvalue=""
          >
            <!---->
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
          </div>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-form__item t-form-item__"
      style="padding-top: 8px;"
    >
      <div
        class="t-form__label t-form__label--right"
        style="width: 100px;"
      >
        <label
          for=""
        >
          
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls-content"
        >
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            style="margin-right: 10px;"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              
              提交
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            style="margin-right: 10px;"
            type="reset"
          >
            <span
              class="t-button__text"
            >
              
              重置
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              清空校验结果
              
            </span>
          </button>
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
  </form>
</div>
`;
